[project]
name = "mutube"
version = "0.1.0"
description = "Open source 1of10/Viewstats alternative. Find out if a youtube video is a relative outlier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.168.0",
    "google-auth-oauthlib>=1.2.2",
    "rich>=14.0.0",
    "xmltodict>=0.14.2",
]
